--- a/start.ipynb
+++ b/start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading data\n",
-      "Setting up pipeline for TabPFNClassifier...\n",
-      "TabPFN model detected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instatiate run class that provides functions for training and evaluation\n",
-    "new_run = runners.Run(pfn_model, load_us_perm_visas)"
+    "new_run = runners.Run(rf_model, load_credit_default)"
    ]
   },
   {
