fixed bounded_train_test_split for stratification

--- a/start.ipynb
+++ b/start.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Instatiate run class that provides functions for training and evaluation\n",
-    "new_run = runners.Run(rf_model, load_credit_default)"
+    "new_run = runners.Run(pfn_model, load_us_perm_visas)"
    ]
   },
   {
